# xgb_fe_codex

./: .codexignore  .gitignore  IMPLEMENTATION.md  README.md  overview.md  plan.md  pyproject.toml
config/: defaults.yaml
docs/: hand_off_notes.md  tier0.md  tier1.md  tier1_k6.md  tier2_absdiff.md  tier2_minmax.md  tier2_product.md  tier2_ratio.md  tier3_ratioofsum.md  tier3_sumproduct.md  tier4_ratioofsum.md  tier4_sumproduct.md
src/cli/: run_experiment.py  summarize_runs.py
src/dgp/: attributes.py  features_t1.py  features_t2.py  features_t3.py  features_t4.py  features_tier0.py  utils.py
src/tests/: test_tier0.py  test_tier1.py  test_tier2.py  test_tier3.py  test_tier4.py
src/train/: metrics.py  run_arm.py  split.py
src/xgb_fe_codex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
